# nacos-sdk-rust-binding-py

./: .gitignore  AGENTS.md  Cargo.toml  README.md  nacos_sdk_rust_binding_py.pyi  pyproject.toml  test.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: CI.yml
examples/: async_config.py  async_naming.py  config.py  naming.py  simple_app.py
src/: async_config.rs  async_naming.rs  config.rs  lib.rs  naming.rs
tests/: test_pickle.py
