[package]
name = "nacos-sdk-rust-binding-py"
version = "0.5.2"
edition = "2024"
license = "Apache-2.0"
publish = false
authors = ["CheirshCai <785427346@qq.com>"]
readme = "README.md"
repository = "https://github.com/opc-source/nacos-sdk-rust-binding-py.git"
description = "nacos-sdk-rust binding for Python with PyO3."
categories = ["network-programming", "development-tools"]
keywords = ["nacos", "ffi", "pyo3", "binding", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nacos_sdk_rust_binding_py"
crate-type = ["cdylib"]
doc = false

[dependencies]
pyo3 = "0.27"
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
# for block api
futures = { version = "0.3", default-features = false, features = ["executor"] }

nacos-sdk = { version = "0.5.2", features = ["default", "auth-by-aliyun"] }
#nacos-sdk = { git = "https://github.com/nacos-group/nacos-sdk-rust.git", branch = "main", features = ["default", "auth-by-aliyun"] }

tracing-subscriber = { version = "0.3", features = ["default"] }
#tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] } # occur `<unknown time>`
tracing-appender = "0.2"
