[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nacos-sdk-rust-binding-py"
requires-python = ">=3.7"
keywords = ["nacos", "ffi", "pyo3", "binding", "python"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "nacos-sdk-rust binding for Python."
license = { text = "Apache-2.0" }
readme = "README.md"

[project.optional-dependencies]
docs = ["pdoc"]
test = ["behave"]

[project.urls]
Documentation = "https://github.com/opc-source/nacos-sdk-rust-binding-py.git"
Homepage = "https://github.com/opc-source/nacos-sdk-rust-binding-py.git"
Repository = "https://github.com/opc-source/nacos-sdk-rust-binding-py.git"

[tool.maturin]
features = ["pyo3/extension-module"]
